crates/shingetsu-compiler/tests/compile_fail/enum_struct_variant.rs
use shingetsu::FromLua;

#[derive(FromLua)]
enum Bad {
    Named { x: i64 },
    Str(bytes::Bytes),
}

fn main() {}
